@@ -1,0 +1,56 @@
+/*
+ *  @(#)SimpleDemo.java  10/10/2001
+ *
+ *  Copyright (c) 2001 Bartek Teodorczyk <barteo@it.pl>. All Rights Reserved.
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ */
+package com.barteo.midp.examples.simpledemo;
+
+import javax.microedition.lcdui.*;
+import javax.microedition.midlet.*;
+
+
+public class SimpleDemo extends MIDlet
+{
+    
+  List menuList;
+
+  
+  public SimpleDemo()
+  {
+    String names[] = {"First", "Second", "Third"};  
+      
+    menuList = new List("UI Demo", List.IMPLICIT, names, null);
+  }
+    
+
+  public void destroyApp(boolean unconditional) 
+  {
+  }
+
+
+  public void pauseApp() 
+  {
+  }
+
+  
+  public void startApp() 
+  {
+    Display.getDisplay(this).setCurrent(menuList);
+  }
+
+}
